--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -18,22 +18,13 @@ jobs:
           node-version: '20'
       - name: Install dependencies
         run: npm install
-
       - name: Check style
         run: npm run eslint
       - name: Build
         run: npm run build
       - name: Test
         run: npm run test
-  e2e_tests:
-    timeout-minutes: 60
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: lts/*
-      - name: Install dependencies
+      - name: Install Playwright dependencies
         run: npm ci
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
@@ -45,3 +36,5 @@ jobs:
           name: playwright-report
           path: playwright-report/
           retention-days: 30
+      - name: Trigger deployment
+        run: curl https://api.render.com/deploy/srv-${{ secrets.RENDER_SERVICE_ID }}?key=${{ secrets.RENDER_API_KEY }}
