--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "jest",
     "test:e2e": "playwright test",
     "eslint": "eslint './**/*.{js,jsx}'",
-    "build": "webpack --mode production"
+    "build": "fail this build"
   },
   "repository": {
     "type": "git",
