--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -43,21 +43,23 @@ jobs:
         if: ${{ env.CONDITION == 'true' }}
         run: curl https://api.render.com/deploy/srv-${{ secrets.RENDER_SERVICE_ID }}?key=${{ secrets.RENDER_API_KEY }}
       - name: Build failed
-        if: ${{ failure() }}
-        uses: stegzilla/discord-notify@v2
-        with:
-          webhook_url: ${{ secrets.DISCORD_WEBHOOK }}
-          colour: '#e00000'
-          title: Build failed
-          message: 'commit [${{ github.sha }}](https://github.com/${{github.repository}}/commit/${{github.sha}}) broke the build :('
+        if: ${{ failure() }} && ${{ env.CONDITION == 'true' }}
+        run: echo "should not trigger this on PR"
+        # uses: stegzilla/discord-notify@v2
+        # with:
+        #   webhook_url: ${{ secrets.DISCORD_WEBHOOK }}
+        #   colour: '#e00000'
+        #   title: Build failed
+        #   message: 'commit [${{ github.sha }}](https://github.com/${{github.repository}}/commit/${{github.sha}}) broke the build :('
       - name: Build succeeded
-        if: ${{ success() }}
-        uses: stegzilla/discord-notify@v2
-        with:
-          webhook_url: ${{ secrets.DISCORD_WEBHOOK }}
-          colour: '#00b700'
-          title: Build succeeded!
-          message: 'A new version of Pokedex deployed to https://amazing-pokedex.onrender.com/'
+        if: ${{ success() }} && ${{ env.CONDITION == 'true' }}
+        run: echo "should not trigger this on PR"
+      #   uses: stegzilla/discord-notify@v2
+      #   with:
+      #     webhook_url: ${{ secrets.DISCORD_WEBHOOK }}
+      #     colour: '#00b700'
+      #     title: Build succeeded!
+      #     message: 'A new version of Pokedex deployed to https://amazing-pokedex.onrender.com/'
   tag_release:
     needs: [simple_deployment_pipeline]
     runs-on: ubuntu-20.04
