--- a/.github/workflows/health_check.yml
+++ b/.github/workflows/health_check.yml
@@ -7,8 +7,8 @@ on:
   pull_request:
     branches: [main]
     types: [opened, synchronize]
-  schedule:
-    - cron: '45 6,18 * * *' # https://pubs.opengroup.org/onlinepubs/9699919799/utilities/crontab.html#tag_20_25_07
+  # schedule:
+  #   - cron: '45 6,18 * * *' # https://pubs.opengroup.org/onlinepubs/9699919799/utilities/crontab.html#tag_20_25_07
 
 jobs:
   simple_periodic_health_check:
